# bitcoin-vpn

./: .gitignore  README.md  index.html  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ArkadeWallet.vue  CashuWallet.vue  UnifiedWallet.vue
src/components/modals/: ArkadeDepositModal.vue  ArkadeSendModal.vue  CashuReceiveModal.vue  CashuSendModal.vue  PrivateKeyModal.vue  VTXOsModal.vue
src/components/ui/: DropdownMenu.vue  Toast.vue  WalletTabs.vue
src/components/wallets/: ArkadeWalletView.vue  CashuWalletView.vue
src/composables/: useArkadeShadowWallet.js  useArkadeWallet.js  useCashuWallet.js  useClipboard.js  useModalState.js  useQRCode.js  useQRScanner.js  useToast.js  useWalletBridge.js
src/styles/: common.css  theme.css
src/styles/components/: arkade-wallet-view.css  cashu-wallet-view.css  modals.css  unified-wallet.css
