[package]
name = "arkade-wallet"
version = "1.0.0"
description = "Arkade Wallet Desktop - Bitcoin wallet supporting Cashu, Spark, and Arkade protocols"
authors = ["zerosats"]
license = "MIT"
repository = "https://github.com/zerosats/arkade-wallet-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "clipboard-all", "dialog-all", "fs-all", "notification-all", "shell-open", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

